docs: update refund policy in Terms

--- a/public/terms/index.html
+++ b/public/terms/index.html
@@ -23,8 +23,8 @@
       <p>API that converts customer-supplied PDF documents into structured JSON/CSV. Digital delivery only.</p>
 
       <h2>2. Pricing &amp; Refunds</h2>
-      <p>Refer to our <a href="/pricing">pricing page</a>. Unconditional 7-day money-back guarantee — email
-         <a href="mailto:support@veredictpdf.com">support@veredictpdf.com</a> with your purchase ID.</p>
+      <p>If VerdictPDF is unable to extract data from your PDF (service failure), you are entitled to a full refund. To request one, email
+         <a href="mailto:support@veredictpdf.com">support@veredictpdf.com</a> within 7&nbsp;days of purchase and include your Paddle receipt&nbsp;ID.</p>
 
       <h2>3. Privacy</h2>
       <p>We process PDFs transiently in memory; files are deleted within 60 minutes. We collect only billing email and
